# filmoptics

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
nk/: Si.nk  air.nk
src/filmoptics/: __main__.py  main.py  tmm_core.py  tmm_utils.py
