[metadata]
name = filmoptics-sstandre
version = 0.0.1
author = Simón Saint-André
author_email = simon@saintandre.com.ar
description = GUI app for optical calculations in film multilayers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sstandre/filmoptics
project_urls =
    Bug Tracker = https://github.com/sstandre/filmoptics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src